<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="informations">最近消息</string>
    <string name="contacts">好友</string>
    <string name="manager">管理</string>
    <string name="title_activity_login">Login</string>
    <string name="input_account">输入账号</string>
    <string name="input_psw">输入密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="user_name">User Name</string>
    <string name="psw">Password</string>
    <string name="psw_confirmed">Password Confirmed</string>
    <string name="please_input_account">请输入数字账号</string>
    <string name="new_psw">new password</string>
    <string name="cancel">取消</string>
    <string name="title_activity_chat">ChatRoom</string>
    <string name="send">发送</string>
    <string name="title_activity_buddy">BuddyActivity</string>
    <string name="empty">清空</string>
    <string name="add_friends">添加</string>

</resources>
