<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bkg0"
    android:orientation="vertical"
    tools:context="ori.bussiness.chat.RegisterActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/bkg1"
        android:layout_marginTop="60dip"
        android:layout_marginBottom="120dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        >

        <TextView android:id="@+id/user_text"
            android:layout_width="100dp"
            android:layout_height="38dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dip"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dip"
            android:text="@string/user_name"
            android:textSize="16sp"
            />
         <TextView android:id="@+id/psw_text"
             android:layout_width="100dp"
             android:layout_height="38dp"
             android:layout_below="@+id/user_text"
             android:layout_marginTop="15dip"
             android:layout_marginStart="15dp"
             android:layout_marginLeft="15dip"
             android:text="@string/psw"
             android:textSize="16sp"
             />

        <TextView android:id="@+id/pswC_text"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_below="@+id/psw_text"
            android:layout_marginTop="15dip"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dip"
            android:text="@string/psw_confirmed"
            android:textSize="16sp"
            />

        <EditText android:id="@+id/user_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/user_text"
            android:layout_toEndOf="@+id/user_text"
            android:layout_marginTop="15dip"
            android:layout_marginRight="3dip"
            android:layout_marginEnd="3dip"
            android:inputType="number"
            android:maxLength="10"
            android:textSize="16sp"
            android:hint="@string/please_input_account"
            />

        <EditText android:id="@+id/psw_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/psw_text"
            android:layout_toEndOf="@+id/psw_text"
            android:layout_below="@+id/user_input"
            android:layout_marginTop="15dip"
            android:layout_marginRight="3dip"
            android:layout_marginEnd="3dp"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:maxLength="16"
            android:hint="@string/new_psw"
            />

        <EditText android:id="@+id/pswC_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/psw_input"
            android:layout_toRightOf="@+id/pswC_text"
            android:layout_toEndOf="@+id/pswC_text"
            android:layout_marginStart="3dip"
            android:layout_marginLeft="3dip"
            android:layout_marginTop="15dip"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textSize="16sp"
            android:hint="@string/psw_confirmed"
            />

        <Button android:id="@+id/register_btn"
            android:layout_width="100dip"
            android:layout_height="38dip"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/pswC_text"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:text="@string/register"
            android:onClick="registerToServer"
            />

        <Button android:id="@+id/cancel_btn"
            android:layout_width="100dip"
            android:layout_height="38dip"
            android:layout_marginLeft="32dp"
            android:textSize="16sp"
            android:text="@string/cancel"
            android:layout_alignTop="@+id/register_btn"
            android:layout_toRightOf="@+id/register_btn"
            android:layout_toEndOf="@+id/register_btn"
            android:background="@color/primary_text_default_material_dark"
            android:layout_marginStart="32dp"
            android:onClick="cancel"
            />

        </RelativeLayout>

</LinearLayout>
