<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ori.bussiness.chat.LoginActivity"
    android:background="@drawable/bkg0"
    android:orientation="vertical"
     >

    <RelativeLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginBottom="60dip"
        android:background="@drawable/bkg1"
        >

        <EditText android:id="@+id/chat_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            android:textSize="16sp"
            android:hint="@string/input_account"
            android:layout_marginTop="40.0dip"
            />
        <EditText android:id="@+id/chat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textSize="16sp"
            android:layout_below="@+id/chat_account"
            android:layout_marginTop="40.0dip"
            android:hint="@string/input_psw"
            />
        <!--登陆按钮-->
        <Button android:id="@+id/login_btn"
            android:layout_width="100dp"
            android:layout_height="38dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/chat_password"
            android:layout_marginTop="12.0dip"
            android:textSize="16sp"
            android:text="@string/login"
            android:onClick="login"
            />
        <!--注册按钮-->
        <Button android:id="@+id/register_btn"
            android:layout_width="100dip"
            android:layout_height="38dip"
            android:layout_toStartOf="@+id/login_btn"
            android:layout_toLeftOf="@+id/login_btn"
            android:layout_below="@+id/chat_password"
            android:layout_marginTop="12.0dip"
            android:textSize="16sp"
            android:text="@string/register"
            android:onClick="register"
            />
        </RelativeLayout>

</LinearLayout>
