<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg0"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ori.bussiness.chat.MyActivity" >

    <RelativeLayout android:id="@+id/menu_bar"
        android:layout_width="fill_parent"
        android:layout_height="36dip"
        android:background="@drawable/topbar_bg" >

        <Button
            android:id="@+id/top_btn_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12.0dip"
            android:layout_marginEnd="12.0dip"
            android:text="@string/empty"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_centerInParent="true"
            android:ellipsize="middle"
            android:gravity="center_horizontal"
            android:text="@string/informations"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_bar"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/lv_recent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:clipToPadding="false"
            android:fadingEdge="none"
            android:fastScrollEnabled="false"
            android:paddingBottom="0dip"
            android:paddingTop="10dip" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="38dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/tabbar_bg_press" >

        <Button
            android:id="@+id/message_btn"
            android:layout_width="120dp"
            android:layout_height="38dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="0dip"
            android:layout_marginStart="0dip"
            android:background="@color/grey"
            android:text="@string/informations"
            android:textSize="16sp" />

        <Button
            android:id="@+id/address_btn"
            android:layout_width="120dp"
            android:layout_height="38dp"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/message_btn"
            android:layout_toRightOf="@+id/message_btn"
            android:text="@string/contacts"
            android:textSize="16sp" />

        <Button
            android:id="@+id/manage_btn"
            android:layout_width="120dp"
            android:layout_height="38dp"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/address_btn"
            android:layout_toRightOf="@+id/address_btn"
            android:text="@string/manager"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>